# mini

./: .gitignore  main.tex  notes.md  paper_outline.md  pyproject.toml  readme.md
.github/: dependabot.yml
notebooks/: NLDisco_MC_Maze.ipynb  NLDisco_tutorial.ipynb  cebra_anaya.ipynb  mini.ipynb  mini0.ipynb  mini_msae.ipynb  mini_msae_anaya.ipynb  mini_msae_anaya_decoding.ipynb  mini_msae_anaya_old.ipynb  mini_msae_place_cells.ipynb  mini_tutorial.ipynb  nldisco_msae.ipynb  simulation_fourPlacecellsAndNoise.ipynb
paper/: acknowledgements.tex  dbm_paper.tex  full_paper.tex  notes.md  paper_outline.md  references.bib
paper/appendix/: additional_dataset_info.tex  additional_model_details.tex  additional_pipeline_details.tex  additional_training_details.tex  appendix.tex
paper/appendix/additional_results/: additional_results.tex  additional_results_allen.tex  additional_results_traditional.tex
paper/arxiv/: discussion.tex  full_paper.tex  introduction.tex  methods.tex  references.bib  results.tex
paper/dbm_paper/: dbm_paper.tex
paper/discussion/: discussion.tex
paper/figures/: intro_fig_notebook.ipynb
paper/introduction/: introduction.tex
paper/methods/: methods.tex  model.tex  pipeline.tex
paper/results/: aeon_results.tex  allen_results.tex  churchland_results.tex  results.tex  synthetic_results.tex
saved_CEBRA_models/nitschke_20090812_20090819_20090910/CEBRA_models/: models_names.pkl  parameter_grid.pkl  temperature_0.0001_time_offsets_1_dataset1.pt  temperature_0.0001_time_offsets_2_dataset1.pt  temperature_0.0005333333333333334_time_offsets_1_dataset1.pt  temperature_0.0005333333333333334_time_offsets_2_dataset1.pt  temperature_0.0009666666666666668_time_offsets_1_dataset1.pt  temperature_0.0009666666666666668_time_offsets_2_dataset1.pt  temperature_0.0014000000000000002_time_offsets_1_dataset1.pt  temperature_0.0014000000000000002_time_offsets_2_dataset1.pt  temperature_0.0018333333333333335_time_offsets_1_dataset1.pt  temperature_0.0018333333333333335_time_offsets_2_dataset1.pt  temperature_0.002266666666666667_time_offsets_1_dataset1.pt  temperature_0.002266666666666667_time_offsets_2_dataset1.pt  temperature_0.0027_time_offsets_1_dataset1.pt  temperature_0.0027_time_offsets_2_dataset1.pt  temperature_0.0031333333333333335_time_offsets_1_dataset1.pt  temperature_0.0031333333333333335_time_offsets_2_dataset1.pt  temperature_0.0035666666666666668_time_offsets_1_dataset1.pt  temperature_0.0035666666666666668_time_offsets_2_dataset1.pt  temperature_0.004_time_offsets_1_dataset1.pt  temperature_0.004_time_offsets_2_dataset1.pt
saved_plot_data_paper/jenkins_20090912_20090916_20090918_20090923/plot_data_all_data/: plotdata_inst0_latent1_vel_magnitude_binned.csv  plotdata_inst0_latent1_vel_magnitude_binned_zbars.csv  plotdata_inst0_latent81_vel_magnitude_binned.csv  plotdata_inst0_latent81_vel_magnitude_binned_zbars.csv  plotdata_inst1_latent137_vel_magnitude_binned.csv  plotdata_inst1_latent137_vel_magnitude_binned_zbars.csv  plotdata_inst1_latent43_vel_magnitude_binned.csv  plotdata_inst1_latent43_vel_magnitude_binned_zbars.csv  plotdata_inst1_latent78_vel_magnitude_binned.csv  plotdata_inst1_latent78_vel_magnitude_binned_zbars.csv
saved_plot_data_paper/nitschke_20090812_20090819_20090910/plot_data_all_data/: plotdata_inst0_latent127_vel_magnitude_binned.csv  plotdata_inst0_latent127_vel_magnitude_binned_zbars.csv  plotdata_inst0_latent169_hit_position_x.csv  plotdata_inst0_latent169_hit_position_x_zbars.csv  plotdata_inst0_latent208_vel_magnitude_binned.csv  plotdata_inst0_latent208_vel_magnitude_binned_zbars.csv  plotdata_inst0_latent24_vel_magnitude_binned.csv  plotdata_inst0_latent24_vel_magnitude_binned_zbars.csv  plotdata_inst0_latent2_vel_magnitude_binned.csv  plotdata_inst0_latent2_vel_magnitude_binned_zbars.csv
saved_plot_data_paper/nitschke_20090812_20090819_20090910/plot_data_sessions_1_2/: plotdata_inst1_latent191_vel_magnitude_binned.csv  plotdata_inst1_latent191_vel_magnitude_binned_zbars.csv  plotdata_inst1_latent505_vel_magnitude_binned.csv  plotdata_inst1_latent505_vel_magnitude_binned_zbars.csv  plotdata_inst1_latent62_vel_magnitude_binned.csv  plotdata_inst1_latent62_vel_magnitude_binned_zbars.csv  plotdata_inst1_latent98_vel_magnitude_binned.csv  plotdata_inst1_latent98_vel_magnitude_binned_zbars.csv
saved_sae_latent_activations/jenkins_20090912_20090916_20090918_20090923/sae_activations/: train_mask.parquet  val_mask.parquet
saved_sae_latent_activations/nitschke_20090812_20090819_20090910/sae_activations/: train_mask.parquet  val_mask.parquet
saved_sae_latent_activations_paper/jenkins_20090912_20090916_20090918_20090923/sae_activations_all_data/: train_mask.parquet  val_mask.parquet
saved_sae_latent_activations_paper/nitschke_20090812_20090819_20090910/sae_activations_all_data/: train_mask.parquet  val_mask.parquet
saved_sae_latent_activations_paper/nitschke_20090812_20090819_20090910/sae_activations_sessions_1_2/: train_mask.parquet  val_mask.parquet
src/mini/: mc_maze.py  pipeline.py  plot.py  train.py
src/mini/sweep/: __init__.py  main.py  (+2 more)
src/nldisco/: __init__.py  cebra_utils.py  decode.py  mc_maze.py  pipeline.py  plot.py  temp.py  train.py  train_val_split.py  util.py
(+5 files in other folders)
