[project]
name = "nldisco"
authors = [{name = "jai", email = "jkbhagatio@gmail.com"}]
description = "Mech Interp for Neural Interp"
requires-python = "==3.9"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-options]
extra-index-urls = [
    "https://download.pytorch.org/whl/cu121", 
    "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
]

[tool.pixi.pypi-dependencies]
nldisco = { path = "." , editable = true }
allensdk = { version = ">=2.16" }
cebra = "==0.4.0"
dandi = "*"  
email-validator = "*" # required for dandi → dandischema → pydantic[email]
jax = { version = ">=0.4.21" }
pip = "*"
sortedcontainers = "*"
temporaldata = "*"
torch = { version = "==2.5.1+cu121" }
torcheval = "*"
torchinfo = "*"
torchtext = "*"
torchvision = { version = "==0.20.1+cu121" }
wandb = "*"

[tool.pixi.dependencies]
datasets = { version = ">=2.14.6" }
einops = "*"
huggingface_hub = "*"
ipdb = "*"
ipykernel = "*"
jaxtyping = "*"
jupyter = "*"
matplotlib = "*"
numpy = { version = "<1.24" }
openai = "*"
pandas = { version = "==1.5.3" }
plotly = { version = ">=5.23.0,<6" }
pyright = "*"
pytest = "*"
scikit-learn = "==1.5.2"
scipy = { version = "<1.11" }
seaborn = "*"
submitit = "*"
tqdm = "*"
typeguard = "*"
rich = "*"
ruff = "*"
h5py = "*"

[tool.pixi.tasks]
postinstall = """
    pip install brainsets &&
    python -m ipykernel install --user
"""

[tool.ruff]
line-length = 99
lint.ignore = [
    "F722",  # syntax error in forward declaration
    "E201",  # whitespace after '('
    "E202",  # whitespace before ')'
    "E203",  # whitespace before ':'
]
